# pytest-atf

./: README.rst  pyproject.toml
pytest_atf/: atf_wrapper.py  markers.py  plugin.py
tests/: test_main_wrapper.py  test_plugin.py
